--- a/index.html
+++ b/index.html
@@ -46,8 +46,21 @@
       <div class="hero-description">
         <h3>CHIDUBEM GIDEON MADUKA</h3>
         <h1>
-          <span>HAY! I'M CHIDUBEM</span><br />
-          A WEB DEVELOPER!
+          <span class="name">
+            <span class="char">H</span><span class="char">A</span><span class="char">Y</span><span class="char">!</span>
+            <span class="char"></span><span class="char">I</span><span class="char">'</span><span class="char">M</span>
+            <span class="char"></span><span class="char">C</span><span class="char">H</span><span class="char">I</span>
+            <span class="char">D</span><span class="char">U</span><span class="char">B</span><span class="char">E</span>
+            <span class="char">M</span>
+          </span><br />
+          <span class="web">
+            <span class="char"> </span><span class="char">A</span><span class="char"> </span>
+            <span class="char">W</span><span class="char">E</span><span class="char">B</span>
+            <span class="char"> </span><span class="char">D</span><span class="char">E</span>
+            <span class="char">V</span><span class="char">E</span><span class="char">L</span>
+            <span class="char">O</span><span class="char">P</span><span class="char">E</span>
+            <span class="char">R</span><span class="char">!</span>
+          </span>
         </h1>
         <p>
           Utilization of web development skills and creative role that leverage
@@ -132,7 +145,7 @@
           dedicated to delivering high-quality solutions that align with project
           goals.
         </p>
-        <div class="stats-grid">
+        <div class="stats-grid" data-animate="stats">
           <div class="stat">
             <div class="stat-number">51<span class="stat-suffix">+</span></div>
             <div class="stat-label">Completed Projects</div>
@@ -149,7 +162,7 @@
       </div>
       <div class="myservice">
         <h2>My Service</h2>
-        <div><p>Website Development</p></div>
+        <div><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 640"><!--!Font Awesome Free v7.0.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.--><path d="M128 96C92.7 96 64 124.7 64 160L64 416C64 451.3 92.7 480 128 480L272 480L256 528L184 528C170.7 528 160 538.7 160 552C160 565.3 170.7 576 184 576L456 576C469.3 576 480 565.3 480 552C480 538.7 469.3 528 456 528L384 528L368 480L512 480C547.3 480 576 451.3 576 416L576 160C576 124.7 547.3 96 512 96L128 96zM160 160L480 160C497.7 160 512 174.3 512 192L512 352C512 369.7 497.7 384 480 384L160 384C142.3 384 128 369.7 128 352L128 192C128 174.3 142.3 160 160 160z"/></svg><p>Website Development</p></div>
         <div><p>Website Hosting</p></div>
       </div>
     </section>
