Updated my work

--- a/index.html
+++ b/index.html
@@ -460,7 +460,7 @@
     <hr />
     <footer>
       <div class="logo-footer">
-        <img src="image/Winner-logo (1).png" alt="My Logo" />
+       <a href=""> <img src="image/Winner-logo (1).png" alt="My Logo" /></a>
       </div>
      <!-- Copyright Notice -->
 <div class="copyright">
