--- a/index.html
+++ b/index.html
@@ -91,12 +91,12 @@
       </div>
       <div class="hero-img">
         <img
-          src="image/AutoEnhancer_Edited img.png"
+          src="image/Mobile-hero-img.png"
           alt="my picture"
           class="desktop-hero-img"
         />
         <img
-          src="image/Mobile-hero-img 1.png"
+          src="image/Mobile-hero-img 2.png"
           alt="My image"
           class="mobile-hero-img"
         />
@@ -416,12 +416,8 @@
         <h2>Get in touch for more information</h2>
         <div class="contact-details">
           <div class="contact-icon phone-No">
-            <div class="icon">
-              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
-                <path
-                  d="M347.1 24.6c7.7-18.6 28-28.5 47.4-23.2l88 24C499.9 30.2 512 46 512 64c0 247.4-200.6 448-448 448c-18 0-33.8-12.1-38.6-29.5l-24-88c-5.3-19.4 4.6-39.7 23.2-47.4l96-40c16.3-6.8 35.2-2.1 46.3 11.6L207.3 368c70.4-33.3 127.4-90.3 160.7-160.7L318.7 167c-13.7-11.2-18.4-30-11.6-46.3l40-96z"
-                />
-              </svg>
+            <div class="icon WIcon">
+              <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="#ffffff" viewBox="0 0 256 256"><path d="M187.58,144.84l-32-16a8,8,0,0,0-8,.5l-14.69,9.8a40.55,40.55,0,0,1-16-16l9.8-14.69a8,8,0,0,0,.5-8l-16-32A8,8,0,0,0,104,64a40,40,0,0,0-40,40,88.1,88.1,0,0,0,88,88,40,40,0,0,0,40-40A8,8,0,0,0,187.58,144.84ZM152,176a72.08,72.08,0,0,1-72-72A24,24,0,0,1,99.29,80.46l11.48,23L101,118a8,8,0,0,0-.73,7.51,56.47,56.47,0,0,0,30.15,30.15A8,8,0,0,0,138,155l14.61-9.74,23,11.48A24,24,0,0,1,152,176ZM128,24A104,104,0,0,0,36.18,176.88L24.83,210.93a16,16,0,0,0,20.24,20.24l34.05-11.35A104,104,0,1,0,128,24Zm0,192a87.87,87.87,0,0,1-44.06-11.81,8,8,0,0,0-6.54-.67L40,216,52.47,178.6a8,8,0,0,0-.66-6.54A88,88,0,1,1,128,216Z"></path></svg>
             </div>
             <div>
               <p>Phone</p>
@@ -459,7 +455,8 @@
     </section>
     <hr />
     <footer>
-      <div class="logo-footer">
+     <div class="footer">
+       <div class="logo-footer">
        <a href=""> <img src="image/Winner-logo (1).png" alt="My Logo" /></a>
       </div>
      <!-- Copyright Notice -->
@@ -489,6 +486,7 @@
           </svg>
         </a>
       </div>
+     </div>
     </footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="index.js"></script>
