Hosted all the image in imgBB

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   </head>
   <body>
     <header>
-      <div class="logo"><img src="image/Winner-logo (1).png" alt="logo" /></div>
+      <div class="logo"><img src="https://i.ibb.co/VW7SBpgF/Winner-logo-1.png" alt="Winner-logo-1"></div>
       <div class="nav">
       <div class="list-item">
           <a href="#hero">HOME</a>
@@ -90,16 +90,9 @@
         </div>
       </div>
       <div class="hero-img">
-        <img
-          src="image/Mobile-hero-img.png"
-          alt="my picture"
-          class="desktop-hero-img"
-        />
-        <img
-          src="image/Mobile-hero-img 2.png"
-          alt="My image"
-          class="mobile-hero-img"
-        />
+        <img src="https://i.ibb.co/nMKCSc3m/Mobile-hero-img.png" class="desktop-hero-img" alt="Mobile-hero-img">
+       
+           <img src="https://i.ibb.co/SDjQ5HFX/Mobile-hero-img-1.png"  class="mobile-hero-img" alt="Mobile-hero-img-1" />
       </div>
     </section>
     <!-- SECTION ABOUT MY SELF  -->
@@ -171,10 +164,7 @@
         <!-- Browser Extension -->
         <div class="borwser-extension project">
           <div class="mortgage-img">
-            <img
-              src="image/Browser Extension img.jpg"
-              alt="Browser extention image"
-            />
+           <img src="https://i.ibb.co/S7d6VPmq/Browser-Extension-img.jpg" alt="Browser-Extension-img">
             <a href="https://don7winner.github.io/Browser-Extention.com/">
               <button class="desktop-btn btn">View Project</button></a
             >
@@ -194,7 +184,7 @@
         <!-- News Homepage -->
         <div class="news-homepage project">
           <div class="mortgage-img">
-            <img src="image/News HomePage img.jpg" alt="News Homepage image" />
+            <img src="https://i.ibb.co/whdGfxzS/News-Home-Page-img.jpg" alt="News-Home-Page-img">
             <a href="https://don7winner.github.io/News-Homepage/"
               ><button class="desktop-btn btn">View Project</button></a
             >
@@ -214,10 +204,7 @@
         <!-- Product List with Cart -->
         <div class="product-list project">
           <div class="mortgage-img">
-            <img
-              src="image/Product LIst.jpg"
-              alt="Product list with cart image"
-            />
+           <img src="https://i.ibb.co/C5GhpD3m/Product-LIst.jpg" alt="Product-LIst">
             <a href="https://don7winner.github.io/Product-list.com/">
               <button class="desktop-btn btn">View Project</button></a
             >
@@ -237,7 +224,7 @@
         <!-- Tip Calculator App -->
         <div class="tip-cal project">
           <div class="mortgage-img">
-            <img src="image/Tip Cal App.jpg" alt="Tip Calculator App image" />
+           <img src="https://i.ibb.co/JwQWKW0s/Tip-Cal-App.jpg" alt="Tip-Cal-App">
             <a href="https://don7winner.github.io/Tip-Calculator-App/"
               ><button class="desktop-btn btn">View Project</button></a
             >
@@ -257,7 +244,7 @@
         <!-- Fylo Dark Landing Page -->
         <div class="fylo project">
           <div class="mortgage-img">
-            <img src="image/Fylo image.jpg" alt="Fylo landing page image" />
+           <img src="https://i.ibb.co/B2Vh8Gh0/Fylo-image.jpg" alt="Fylo-image">
             <a href="https://don7winner.github.io/Fylo-Page.com/"
               ><button class="desktop-btn btn">View Project</button></a
             >
@@ -340,7 +327,7 @@
                 <div class="testimonial-card">
                     <div class="testimonial-content">
                         <div class="testimonial-image">
-                           <img src="image/Codemantix logo.jpg" alt="Codemantix collective logo" >
+                          <img src="https://i.ibb.co/wZkmQD4j/Codemantix-logo.jpg" alt="Codemantix-logo">
                            <h3>Codemantix Collective</h3>
                         </div>
                         
@@ -457,7 +444,7 @@
     <footer>
      <div class="footer">
        <div class="logo-footer">
-       <a href=""> <img src="image/Winner-logo (1).png" alt="My Logo" /></a>
+       <a href=""> <img src="https://i.ibb.co/VW7SBpgF/Winner-logo-1.png" alt="Winner-logo-1"></a>
       </div>
      <!-- Copyright Notice -->
 <div class="copyright">
