anther changes were done

--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
   </head>
   <body>
     <header>
-      <div class="logo"><img src="https://i.ibb.co/VW7SBpgF/Winner-logo-1.png" alt="Winner-logo-1"></div>
+     <div class="header">
+       <div class="logo"><img src="https://i.ibb.co/VW7SBpgF/Winner-logo-1.png" alt="Winner-logo-1"></div>
       <div class="nav">
       <div class="list-item">
           <a href="#hero">HOME</a>
@@ -45,10 +46,12 @@
       </div>
       <img src="image/icon-menu.svg" alt="menu icon" id="menu-bar" />
       <img src="image/icon-close.svg" alt="close icon" id="close-bar" />
+     </div>
     </header>
     <!-- Hero Section -->
     <section id="hero">
-      <div class="hero-description">
+     <div class="hero-section">
+       <div class="hero-description">
         <h3>CHIDUBEM GIDEON MADUKA</h3>
         <h1>
         <span class="name">HI! I'M CHIDUBEM</span>A SOFTWARE DEVELOPER
@@ -92,12 +95,14 @@
       <div class="hero-img">
         <img src="https://i.ibb.co/nMKCSc3m/Mobile-hero-img.png" class="desktop-hero-img" alt="Mobile-hero-img">
        
-           <img src="https://i.ibb.co/SDjQ5HFX/Mobile-hero-img-1.png"  class="mobile-hero-img" alt="Mobile-hero-img-1" />
+        <img src="https://i.ibb.co/FbBs240q/Mobile-hero-img.png"  class="mobile-hero-img" alt="Mobile-hero-img">  
       </div>
+     </div>
     </section>
     <!-- SECTION ABOUT MY SELF  -->
     <section id="AboutMe">
-      <div class="details">
+      <div class="aboutMe-section">
+        <div class="details">
         <h2>About Me</h2>
         <p>
           I'm Chidubem, a passionate
@@ -135,15 +140,17 @@
         <div><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 640"><!--!Font Awesome Free v7.0.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.--><path d="M128 96C92.7 96 64 124.7 64 160L64 416C64 451.3 92.7 480 128 480L272 480L256 528L184 528C170.7 528 160 538.7 160 552C160 565.3 170.7 576 184 576L456 576C469.3 576 480 565.3 480 552C480 538.7 469.3 528 456 528L384 528L368 480L512 480C547.3 480 576 451.3 576 416L576 160C576 124.7 547.3 96 512 96L128 96zM160 160L480 160C497.7 160 512 174.3 512 192L512 352C512 369.7 497.7 384 480 384L160 384C142.3 384 128 369.7 128 352L128 192C128 174.3 142.3 160 160 160z"/></svg><p>Website Development</p></div>
         <div><svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="#000000" viewBox="0 0 256 256"><path d="M168,104a40,40,0,1,0-40,40A40,40,0,0,0,168,104Zm-64,0a24,24,0,1,1,24,24A24,24,0,0,1,104,104Zm120,96H136V183.6a80,80,0,1,0-16,0V200H32a8,8,0,0,0,0,16H224a8,8,0,0,0,0-16ZM64,104a64,64,0,1,1,64,64A64.07,64.07,0,0,1,64,104Z"></path></svg><p>Website Hosting</p></div>
       </div>
+      </div>
     </section>
     <!-- Project Section -->
     <section id="project-container">
-      <h2>PROJECT</h2>
+     <div class="project-section">
+       <h2>PROJECT</h2>
       <div class="project-img-container">
         <!-- Mortgage -->
         <div class="mortgage project">
           <div class="mortgage-img">
-            <img src="image/Mortage img.jpg" alt="Mortgage cal image" />
+            <img src="https://i.ibb.co/wZ7Zjn9W/Mortage-img.jpg" alt="Mortage-img">
             <a href="https://don7winner.github.io/Mortgage.com/"
               ><button class="desktop-btn btn">View Project</button></a
             >
@@ -319,6 +326,7 @@
           </p>
         </div>
       </div>
+     </div>
     </section>
     <!-- TESTIMONIAL  -->
      <div class="container">
@@ -342,7 +350,8 @@
     </div>
     <!-- Contact Section -->
     <section id="contact">
-      <div class="getin-touch">
+     <div class="contact-section">
+       <div class="getin-touch">
         <h1>get in touch</h1>
         <h2>Let's Discuss Project</h2>
         <p>
@@ -439,6 +448,7 @@
           </div>
         </div>
       </div>
+     </div>
     </section>
     <hr />
     <footer>
